--- a/index_full.html
+++ b/index_full.html
@@ -323,7 +323,7 @@
 
 		<div class="keyboard_focus_notifier no_focus"></div>
 		
-		<div class="side_panel">
+		<div-iron-resize class="side_panel">
 
 			<file-organiser class="side_panel_row"
 				is_dragging_in="{{drop_in_progress}}"
@@ -367,7 +367,7 @@
 				</div>
 			</div>
 		
-		</div>
+		</div-iron-resize>
 
 		<iron-splitter direction="left"></iron-splitter>
 		
