focus marker el

--- a/index_full.html
+++ b/index_full.html
@@ -25,6 +25,7 @@
 <link rel="import" href="file-organiser.html">
 <link rel="import" href="drop-zone.html">
 <link rel="import" href="floating-pane.html">
+<link rel="import" href="document-focus-marker.html">
 </head>
 
 <body>
@@ -298,8 +299,7 @@
 	</custom-toolbar>
 
 	<div id="all_below_toolbar">
-
-		<div class="keyboard_focus_notifier no_focus"></div>
+		<document-focus-marker></document-focus-marker>
 		
 		<div-iron-resize class="side_panel">
 
