--- a/worker-builder.html
+++ b/worker-builder.html
@@ -159,7 +159,7 @@ var exec_main_b = function(/*arguments*/){
     log: function(){
         self.postMessage({
             foo:'console.log',
-            args:  Array.prototype.slice.call(arguments)
+            args: Array.prototype.slice.call(arguments, 0)
         });
     }
  };
@@ -275,13 +275,13 @@ var endian = function(){
         var foo = e.data.foo;
         try{
             this._listener[foo].apply(this._listener, e.data.args);
-        }catch(e){
+        }catch(err){
             if(foo === "console.log"){
                 console.log(e.data.args);
             } else if(foo === "set_array_on_main_window"){
                 window[e.data.args[1]] = new window[e.data.args[2]](e.data.args[0]);
             } else {
-                throw e;
+                throw err;
             }
         }
     }
