--- a/file-organiser.html
+++ b/file-organiser.html
@@ -207,6 +207,12 @@ Polymer({
 			notify: true,
 			readOnly: true
 		},
+		selected_files: {
+			type: Object,
+			value: function(){return {set: 0, pos: 0, tet: 0, cut: 0}},
+			readOnly: true,
+			notify: true
+		},
 		is_dragging_out: {
 			type: Boolean,
 			value: false,
@@ -332,15 +338,17 @@ Polymer({
     	var trial = this._trial_from_base[this.selected_trial];
     	var tet_obj = trial && this._get_tet_obj(trial, this.selected_tet_num, false);
     	var cut = this.selected_cut;
-
-    	var files = {
-			set: trial && trial.set,
-			pos: trial && trial.pos,
-			tet: tet_obj && tet_obj.tet,
-			cut: cut
-		}
-		console.log(JSON.stringify(files));
-
+    	var title = this.selected_trial + " [Wavform]" || "Waveform";
+    	var url = location.pathname + "?";
+    	url += this.selected_trial ? "exp=" + this.selected_trial + "&" : "";
+    	url += this.selected_tet_num > 0? "tet=" + this.selected_tet_num : "";
+    	window.history.pushState("", title,  url);
+    	this._setSelected_files({
+			set: trial && trial.set ? trial.set : 0,
+			pos: trial && trial.pos ? trial.pos : 0,
+			tet: tet_obj && tet_obj.tet ? tet_obj.tet : 0,
+			cut: cut ? cut : 0
+		});
     }, _drop: function(e){
 	  	e.stopPropagation();
         e.preventDefault();
@@ -628,9 +636,12 @@ Polymer({
 		available_tets = Array.from(available_tets);
 		available_tets.sort(this._numeric_sort);
 		this._setAvailable_tets(available_tets);
-    	this._reassign_trials_denovo();
+    	this._reassign_trials_denovo();    	
     },
-    _regex_cut_tet_num: /(\d*)[a-zA-Z _]*\.cut$/,
+     _regex_cut_tet_num: /(\d*)[a-zA-Z _]*\.cut$/
+    , get_file: function(fkey){
+    	return this._file_from_fkey[fkey];
+    }
 })
 
 </script>
